# rust-playground

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.githooks/: pre-commit
lib/credential/: Cargo.toml  README.md
lib/credential/src/: lib.rs
lib/dynamo_util/: Cargo.toml
lib/dynamo_util/src/: lib.rs
lib/jwt/: Cargo.toml
lib/jwt/scripts/: setup.sh
lib/jwt/src/: error.rs  issuer.rs  lib.rs  model.rs  tag.rs  validator.rs
lib/jwt/test_resources/: public.pem  secret.pem
lib/kinesis/: Cargo.toml  build.rs
lib/kinesis/proto/: record.proto
lib/kinesis/src/: aggregator.rs  intern.rs  lib.rs  producer.rs  shutdown.rs  sink.rs  topology.rs
lib/rocket_util/: Cargo.toml
lib/rocket_util/src/: lib.rs
lib/rusoto_util/: Cargo.toml
lib/rusoto_util/src/: lib.rs
lib/stream/: Cargo.toml
lib/stream/src/: batch.rs  lib.rs  limiter.rs
lib/telemetry/: Cargo.toml
lib/telemetry/src/: lib.rs
scripts/: build-docker.sh  kinesis-agg-validate.py  lint.sh
services/auth/: Cargo.toml  README.md  Rocket.toml  docker-compose.yml
services/auth/scripts/: dynamodb.json
services/auth/src/: config.rs  main.rs
services/auth/src/api/: client.rs  config.rs  error.rs  mod.rs  token.rs  user.rs
services/auth/src/dao/: config.rs  error.rs  mod.rs  util.rs
services/auth/src/dao/client/: dynamo.rs  memory.rs  mod.rs
services/auth/src/dao/renewal/: dynamo.rs  memory.rs  mod.rs
services/auth/src/dao/user/: dynamo.rs  memory.rs  mod.rs
services/auth/src/model/: client.rs  mod.rs  renewal.rs  user.rs
services/auth/src/policy/: client.rs  mod.rs  user.rs
services/auth/src/service/: auth.rs  mod.rs  token.rs
services/calculator/: Cargo.toml  README.md
services/calculator/calculator/: Cargo.toml  Rocket.toml
services/calculator/calculator/client/: Cargo.toml  Makefile
services/calculator/calculator/client/src/: lib.rs
services/calculator/calculator/src/: config.rs
services/calculator/gateway/: Cargo.toml
services/calculator/gateway/src/: client.rs  error.rs
services/calculator/src/: api.rs  main.rs
services/crawler/: README.md  docker-compose.yml
services/crawler/api/: Cargo.toml
services/crawler/api/src/: api.rs  main.rs
services/crawler/crawler/: Cargo.toml
services/crawler/crawler/src/: crawler.rs  decoder.rs  main.rs  parser.rs
services/crawler/shared/: Cargo.toml
services/crawler/shared/src/: config.rs  lib.rs  metrics.rs
services/crawler/shared/src/dao/: dynamo.rs  mod.rs
services/crawler/shared/src/mq/: mod.rs  rabbitmq.rs
services/gateway/: Cargo.toml  README.md  Rocket.toml
services/gateway/src/: api.rs  config.rs  main.rs
services/gateway/src/expression/: mod.rs  parser.rs
services/kinesis/: docker-compose.yml
services/kinesis/producer/: Cargo.toml  Rocket.toml
services/kinesis/producer/src/: api.rs  config.rs  main.rs
