[workspace]

members = [
    "lib/credential",
    "lib/dynamo_util",
    "lib/jwt",
    "lib/telemetry",
    "lib/rocket_util",
    "lib/rusoto_util",
    "lib/kinesis",
    "services/auth",
    "services/gateway",
    "services/calculator",
    "services/calculator/client",
]


[patch.crates-io]
# TODO: Remove once version 0.5 released
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }