[package]
name = "credential"
version = "0.1.0"
authors = ["Raphael Taylor-Davies"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
ring = { version="0.16", features=["std"] }
serde = {version="1.0", features=["derive"]}
tokio = { version="0.2", features=["sync"]}
