[package]
name = "dynamo_util"
version = "0.1.0"
authors = ["Raphael Taylor-Davies"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusoto_core = { version="0.45", default_features=false, features=["rustls"] }
rusoto_dynamodb = { version="0.45", default_features=false, features=["rustls"] }
