[package]
name = "kinesis"
version = "0.1.0"
authors = ["Raphael Taylor-Davies"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version="0.5", features=["serde"] }
futures = "0.3"
indexmap = "1.6.0"
md5 = "0.7"
pin-project = "1.0"
prost = "0.6"
rusoto_core = { version="0.45", default_features=false, features=["rustls"] }
rusoto_dynamodb = { version="0.45", default_features=false, features=["rustls"] }
rusoto_kinesis = { version="0.45", default_features=false, features=["rustls"] }
rusoto_sts = { version="0.45", default_features=false, features=["rustls"] }
serde = "1.0"
tokio = { version="0.2", features=["rt-threaded", "rt-util", "macros", "sync", "time"] }
tracing = "0.1"

rusoto_util = { path="../rusoto_util" }
stream = { path="../stream" }

[build-dependencies]
prost-build = "0.6"
