[package]
name = "stream"
version = "0.1.0"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="0.2", features=["rt-threaded", "rt-util", "macros", "sync", "time"] }
tracing = "0.1"
futures = "0.3"
pin-project = "1.0"
