[package]
name = "telemetry"
version = "0.1.0"
authors = ["Raphael Taylor-Davies"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
prometheus = "0.9"

[dev-dependencies]
tokio = { version="0.2", features=["rt-threaded", "rt-util", "macros", "sync", "time"]}