[package]
name = "calculator"
version = "0.1.0"
authors = ["Raphael Taylor-Davies"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

env_logger = "0.6"
lazy_static = "1.4"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
strum = "0.18"
strum_macros = "0.18"
tokio = { version="0.2", features=["rt-threaded", "rt-util", "macros", "sync", "time"]}
rocket = { version="0.5.0-dev", default_features=false }
rocket_contrib = "0.5.0-dev"

jwt = { path = "../../lib/jwt" }
telemetry = { path = "../../lib/telemetry" }
rocket_util = { path = "../../lib/rocket_util" }
calculator_client = { path = "./client", package = "client" }
