[package]
name = "gateway"
version = "0.1.0"
authors = ["Raphael Taylor-Davies"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

env_logger = "0.6"
lazy_static = "1.4"
futures = "0.3"
log = "0.4"
nom = "5.1"
reqwest = { version="0.10.8", default_features=false, features=["rustls-tls", "json"] }
serde = "1.0"
tokio = { version="0.2", features=["rt-threaded", "rt-util", "macros", "sync", "time"] }
rocket = { version="0.5.0-dev", default_features=false }
rocket_contrib = "0.5.0-dev"

jwt = { path = "../../lib/jwt" }
telemetry = { path = "../../lib/telemetry" }
rocket_util = { path = "../../lib/rocket_util" }
calculator_client = { path = "../calculator/client", package = "client" }
