[package]
name = "crawler"
version = "0.1.0"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.24"
derive_more = "0.99.3"
encoding_rs = "0.8.22"
env_logger = "0.6"
futures = "0.3.4"
html5ever = "0.25.1"
log = "0.4.8"
mime = "0.3.7"
reqwest = { version="0.10.3", features=["rustls-tls"], default-features=false }
tokio = { version="0.2.13", features=["rt-threaded", "rt-util", "macros", "sync", "time"] }
url = "2.1.1"

shared = { path = "../shared" }