[package]
name = "shared"
version = "0.1.0"
authors = ["Raphael Taylor-Davies <r.taylordavies@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.24"
cadence = "0.19.1"
config = "0.10.1"
deadpool = "0.5.1"
deadpool-redis = "0.5.2"
derive_more = "0.99.3"
futures = "0.3.4"
lapin = {version="0.32.0", default_features=false, features=["rustls", "futures"]}
log = "0.4.8"
rusoto_core = { version="0.45.0", default_features=false, features=["rustls"] }
rusoto_dynamodb = { version="0.45.0", default_features=false, features=["rustls"] }
serde_dynamodb = { version="0.6.0", default_features=false, features=["rustls"] }
serde = "^1.0.0"
serde_json = "1.0.48"

dynamo_util = { path="../../../lib/dynamo_util" }
