[package]
name = "client"
version = "0.1.0"
authors = ["Raphael Taylor-Davies"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
strum = "0.18"
strum_macros = "0.18"
